# CICV-Beauchef

./: README.md
Proyecto_1_UUR/: Funciones.py  README.md  main.tex  requirements.txt
Proyecto_2_ReverseKnock/: prueba_3.py  tierlist.py  ultima.py
Proyecto_3_GeckoKnock/: GECKONOCKfull.m  OptKnock_modificado2.asv  OptKnock_modificado2.m  README.md  geckoOptKnockDualFull.m
Proyecto_4_WWL-GRAIP/: graphlets_counts.py  test_graphlets.py
Proyecto_4_WWL-GRAIP/GRAIP/: compare.py  config.yaml  diff.csv  dist_julia.csv  dist_python.csv  evaluate.py  requirements.txt  seq_python_g1.csv  test.py  verify_twwl.py
Proyecto_4_WWL-GRAIP/GRAIP/generator/: twwl.py
Proyecto_4_WWL-GRAIP/twwl/: Artifacts.toml  Manifest.toml  Project.toml  README.md  compute_dist.jl  export_mutag.jl  mutag_graphs.jls  seq_julia_g1.csv
Proyecto_4_WWL-GRAIP/twwl/mutag_graphs/: graph_1.txt  graph_10.txt  graph_100.txt  graph_101.txt  graph_102.txt  graph_104.txt  graph_105.txt  graph_106.txt  graph_107.txt  graph_108.txt  graph_109.txt  graph_11.txt  graph_110.txt  graph_111.txt  graph_113.txt  graph_114.txt  graph_115.txt  graph_116.txt  graph_117.txt  graph_118.txt  graph_119.txt  graph_12.txt  graph_120.txt  graph_121.txt  graph_122.txt  graph_123.txt  (+156 more)
Proyecto_4_WWL-GRAIP/twwl/test/others/: appendix_experiment1.py  experiment2.py  pyproject.toml
Proyecto_4_WWL-GRAIP/twwl/test/others/GenWL/: GraphDataToGraphList.py  GraphSet.py  WeisfeilerLehmann.py  appendix_experiment1.py  experiment2.py  pyproject.toml
Proyecto_4_WWL-GRAIP/twwl/test/others/GenWL/Data/: README.md
Proyecto_4_WWL-GRAIP/twwl/test/others/WL-distance/: appendix_experiment1.py  experiment2.py  pyproject.toml
Proyecto_4_WWL-GRAIP/twwl/test/others/WL-distance/experiments/: svm.py
Proyecto_4_WWL-GRAIP/twwl/test/others/WL-distance/utils/: distances.py
(+10 files in other folders)
