[project]
name = "genwl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "networkx==2.2",
  "numpy==1.19.1",
  "pandas>=1.3.3",
  "pot==0.7.0",
  "pyarrow>=17.0.0",
  "scikit-learn==0.24.1",
  "setuptools>=75.3.2",
  "tqdm>=4.67.1",
]
